Add security hardening and fix warnings
Backend:
- Add rate limiting middleware (tower_governor): 5 req/sec for auth, 100 req/sec for API
- Add scan path blocking middleware to reject common scanner probes (/.git, /wp-admin, .php, etc.)
- Fix slow SQL query warnings by increasing threshold to 5 seconds for large receipt images
- Add tower, governor, tower_governor dependencies for rate limiting

Frontend:
- Fix NPM vulnerabilities by adding overrides for cookie (^0.7.0) and esbuild (^0.25.0)
- Update package-lock.json with security fixes

Documentation:
- Add Security Middleware section to CLAUDE.md
- Add Security Hardening feature section to README.md

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -39,9 +39,15 @@ rand = "0.8"
 dotenvy = "0.15"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+log = "0.4"
 chrono = { version = "0.4", features = ["serde"] }
 thiserror = "2"
 clap = { version = "4", features = ["derive"] }
 uuid = { version = "1", features = ["v4"] }
 sha2 = "0.10"
 hex = "0.4"
+
+# Rate limiting
+tower = "0.5"
+governor = "0.8"
+tower_governor = "0.6"
